<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">优商圈</string>
    <string name="re_lunch_login">重试</string>
    <string name="lunch_login">登录</string>
    <string name="lunch_sign">新用户</string>
    <string name="hello_world">你好请登陆!</string>
    <string name="common_done">完成</string>
    <string name="update_done">同步</string>
    <string name="submit_done">提交</string>
    <string name="register_title">请输入您的手机号</string>
    <string name="register_title_edit">手机号码</string>
    <string name="register_title_yzm">验证码</string>
    <string name="register_title_yzm_no">收不到验证码?</string>
    <string name="register_title_pwd">请设置密码</string>
    <string name="register_get_yzm_reload">重新获取验证码</string>
    <string name="register_pwd_1">请输入6~16位密码</string>
    <string name="register_pwd_2">请再重复输入密码</string>
    <string name="register_shop_name">请输入您的店铺名称</string>
    <string name="register_shop_address">您的店铺地址</string>
    <string name="register_set_shop_address">自定义店铺位置</string>
    <string name="register_notice_something1">已经阅读并注意</string>
    <string name="register_notice_something2">注册使用协议</string>
    <string name="register_notice_something3">和</string>
    <string name="register_notice_something4">禁售商品管理</string>
    <string name="register_step_next">下一步</string>
    <string name="register_step_previous">上一步</string>
    <string name="register_step_done">完成</string>
    <string name="register_step2_notice_something1">我们已发送</string>
    <string name="register_step2_notice_something2">验证码短信</string>
    <string name="register_step2_notice_something3">到这个号码</string>
    <string name="load_data_success">数据加载成功!</string>
    <string name="load_data_error">数据加载失败!</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_product_manager">商品</string>
    <string name="title_activity_user_info">用户信息</string>
    <string name="title_activity_product_manage">商品信息</string>
    <string name="title_activity_image_dir">选择目录</string>
    <string name="title_activity_images">选择图片</string>
    <string name="title_activity_images_preview">预览</string>
    <string name="add">十添加 </string>
    <string name="check">选择</string>
    <string name="uncheck">取消选择</string>
    <string name="preview">预览</string>
    <string name="por_add_done">完成</string>
    <string name="check_dir">选择目录</string>
    <string name="check_length">已经选择<xliff:g id="anystring_you_like">%1$d</xliff:g>张图片</string>
    <string name="tip_max_size">最多只能选择<xliff:g id="anystring_you_like">%1$d</xliff:g>张图片</string>
    <string name="new_add_image">新增</string>
    <string name="google_plus_title">Google Plus</string>
    <string name="google_maps_title">Maps</string>
    <string name="google_messenger_title">Messenger</string>
    <string name="dialogHeader_header_title">分类至</string>
    <string name="dialogHeader_new_header_title">新增商品分类</string>
    <string name="dialogHeader_modify_header_title">修改商品分类</string>
    <string name="dialogHeader_header_sample">方便顾客在店铺筛选</string>
    <string name="dialogLabel_header_title">设置标签</string>
    <string name="dialogLabel_header_sample">使顾客快速了解商品特征</string>
    <string name="pro_out_sale">下架商品</string>
    <string name="pro_inner_sale">上架商品</string>
    <string name="pro_del_pro">删除商品</string>
    <string name="pro_search">搜索</string>
    <string name="footer_button_close">取消</string>
    <string name="footer_button_confirm">确定</string>
    <string name="footer_sample">确认操作</string>
    <string name="button_bottom">Bottom</string>
    <string name="button_center">Center</string>
    <string name="button_top">Top</string>
    <string name="title_activity_shop_config">店铺设置</string>
    <string name="title_activity_shop_name_config">店铺名称</string>
    <string name="title_activity_shop_slogan_config">店铺公告</string>
    <string name="title_activity_shop_ground_config">店铺招牌</string>
    <string name="title_activity_shop_address_config">店铺地址</string>
    <string name="map_marker"></string>
    <string name="map_anchor"></string>
    <string name="map_list"></string>
    <string name="map_crop"></string>
    <string name="map_reply"></string>
    <string name="map_paper_plane"></string>
    <string name="map_save"></string>
    <string name="map_search"></string>
    <string name="map_route_car"></string>
    <string name="map_route_bus"></string>
    <string name="map_route_male"></string>
    <string name="map_arrow_circle_left"></string>
    <string name="map_arrow_circle_right"></string>
    <string name="map_fa_rss_square"></string>
    <string name="map_confirm">确定</string>
    <string name="map_back">返回</string>
    <string name="main_eye">&#xf06e;</string>
    <string name="main_shar">&#xf1e0;</string>
    <string name="main_copy_url">&#xf127;</string>
    <string name="main_cover_add">&#xf0ee;</string>
    <string name="main_cover_edit">&#xf044;</string>
    <string name="main_cover_ok">&#xf00c;</string>
    <string name="main_cover_del">&#xf014;</string>
    <string name="main_list_label_sale">销售中</string>
    <string name="main_list_label_out">已下架</string>
    <string name="main_list_label_cover">分类</string>
    <string name="main_covers_new_title">请输入分类名称</string>
    <string name="login_user_login">登录</string>
    <string name="title_activity_header_animator">我的店铺</string>
    <string name="title_activity_product_classify">详情</string>
    <string name="title_activity_register_manage">注册</string>
    <string name="title_activity_register_step2">请填写验证码</string>
    <string name="title_activity_register_step_pwd">设置密码</string>
    <string name="title_activity_register_shop_create">创建店铺</string>
    <string name="title_activity_first_user_open">欢迎使用</string>
    <string name="title_activity_fullscreen">欢迎使用</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_super_main">优商圈</string>
    <string name="app_description">Android drawer icon with material design animation</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="main_user_name">郑立奥</string>
    <string name="main_user_accound">zhengliaots@gmail.com</string>
    <string name="main_user_product">我的商品</string>
    <string name="main_user_info">账户信息</string>
    <string name="main_user_cover_type">我的商品类别</string>
    <string name="main_user_message">系统消息</string>
    <string name="main_shop_index">店铺首页</string>
    <string name="main_get_quit">退出</string>
    <string name="main_user_update">检查更新</string>
    <string name="main_user_setting">设置</string>
    <string name="main_user_give_back">意见反馈</string>
    <string name="main_user_get_help">获取帮助</string>
    <string name="main_user_get_link">联系我们</string>
    <string name="icon_gou_wu_che">&#xf07a;</string>
    <string name="icon_truck">&#xf0d1;</string>
    <string name="icon_tag">&#xf02c;</string>
    <string name="icon_gift">&#xf06b;</string>
    <string name="icon_qian">&#xf157;</string>
    <string name="icon_volume_up">&#xf028;</string>
    <string name="icon_clock">&#xf017;</string>
    <string name="icon_square_1">&#xf0fe;</string>
    <string name="icon_square_2">&#xf055;</string>
    <string name="icon_square_3">&#xf067;</string>
    <string name="icon_exchange">&#xf0ec;</string>
    <string name="title_activity_add_activity_shop">新增活动</string>
    <string name="title_activity_add_done">完成</string>
    <string name="title_activity_add">+添加</string>
    <string name="title_activity_activity_manage">活动管理</string>
    <string name="title_activity_new_activity_shop">添加活动</string>
    <string name="title_activity_start_activity_shop">开始活动</string>
    <string name="title_activity_end_activity_shop">结束活动</string>
    <string name="title_activity_delete_activity_shop">删除活动</string>
    <string name="title_activity_dynamic_manage2">折扣管理</string>
    <string name="title_dynamic_add">+添加</string>
    <string name="title_activity_select_sale_product">选择折扣商品</string>
    <string name="title_activity_add_product_sale">商品折扣</string>
    <string name="title_sale_add_done">完成</string>
    <string name="title_activity_account_user_manage">账户管理</string>
    <string name="loren_ipsum">Lorem ipsum dolor sit amet,</string>
    <string name="title_activity_cover_manage">类别管理</string>
    <string name="title_activity_web_view">浏览</string>
    <string name="title_activity_message_all">消息</string>
    <string name="title_activity_message_pageview">消息</string>
    <string name="error_title_damn">很遗憾</string>
    <string name="error_subtitle_failed_one_more_time">请求失败</string>
    <string name="info_retrying">重试</string>
    <string name="title_activity_photo_design">图片优化</string>
    <string name="photo_done">完成</string>
    <string name="photo_advance">更多效果</string>
    <string name="photo_choose_filter">选择效果</string>
    <string name="photo_save">完成</string>
    <string name="photo_bar_set">调整</string>
    <string name="title_activity_image_order_change">图片展示顺序</string>
    <string name="photo_order_done">完成</string>
    <string name="title_activity_shop_web_view">店铺预览</string>
    <string name="order_img_index">调整顺序</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title_activity_update_version">优商圈</string>
    <string name="title_activity_search_product">查询</string>
    <string name="removed_positions">删除位置: %s</string>
    <string name="moved">\'%1$s\' 移动到位置 %2$s</string>
    <string name="newly_added_item">这是新添加的项目 %d</string>
    <string name="itemdeleted">继续滑动删除分类</string>
    <string name="taptoundo">点击取消</string>
    <string name="activity_dynamiclistview_header">长按类别可拖动排序.\n左右滑动删除分类.\n</string>
    <string name="title_activity_user_feed_back">联系我们</string>
    <string name="title_activity_help_info">常见问题</string>
    <string name="help_add_new_pro">在首页，点击“新增”按钮或者在商品列表页面，点击右上角“添加”，都可以进行商品的新增。</string>
    <string name="help_del_out_pro">在首页，点击“商品”按钮进入商品管理，点击列表中任意商品，跳转到商品详情页，滑动到底部，点击“下架商品”和“删除商品”按钮进行操作。</string>
    <string name="help_img_add_edit">在商品详情页，点击头部“加号”图片，选择相册中的图片进行添加；点击图片下方的“调整顺序”按钮，可以对多张图片的显示顺序进行调整，排在第一位的图片默认为封面图片；单击图片进入图片滤镜效果能
        简单的对图片进行美化处理，用户通过拖动底部滑块可以调整强度。</string>
    <string name="help_add_more_info">在商品详情页，点击“添加商品参数”，能过添加多条描述，输入“型号”，“描述”，用户都是可以自定义的。</string>
    <string name="help_cover_hot_label">“分类”能够让用户更快速和准确的检索定位到商品；“掌柜推荐”会被推荐到店铺首页，同时也能被优先检索和查找到，适当的设置会提高检索几率；标签功能暂时未开放。以上功能都能在商品信息页设置。</string>
    <string name="help_share">在商品列表页面，点击店铺名称下方的分享按钮，或者点击商品列表下方右侧的分享按钮，都能实现分享操作。</string>
    <string name="help_copy">在商品列表页面，点击店铺名称下方的预览和复制链接按钮，或者点击商品列表下方预览和复制链接按钮，都能实现预览操作。发送后用户可以通过浏览器浏览网页版内容。</string>
    <string name="help_modify_shop">在首页点击“店铺”按钮，即可进行信息修改。店铺位置需要调用定位数据，需要用户允许操作。</string>
    <string name="help_dy_sale">在首页点击“活动”和“折扣”按钮，即可进行相应设置，活动会被推荐到“买家版”动态首页展示。</string>
    <string name="help_cover_index">在首页点击“分类”按钮，即可进行分类的添加修改删除；拖动想要排序的列即可进行排序操作。</string>
    <string name="help_link_us">邮件servers@178tb.com,100919133@qq.com,电话0315-3840206，或者直接反馈给我们，我们会尽快联系您。</string>
    <string name="title_activity_shop_authentic">上传认证资料</string>
    <string name="camera_result_ok">使用图片</string>
    <string name="camera_result_cancel">取消</string>
    <string name="hint">提示</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    <string name="action_back">返回</string>
    <string name="action_cancel">取消</string>
    <string name="action_ok">确定</string>
    <string name="version_theme">1.0.0</string>
    <string name="imageview_content_description"></string>
    <string name="record_camera_author">%1$s 作品</string>
</resources>