<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/gainsboro"
    tools:context="com.trade.bluehole.trad.RegisterManageActivity">

    <TextView
        android:id="@+id/notice"
        android:layout_margin="@dimen/n_padding_normal"
        android:text="@string/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/reg_phone_area"
        android:layout_below="@id/notice"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/n_padding_normal"
        android:padding="@dimen/n_padding_normal"
        android:background="@color/white"
        android:layout_height="@dimen/reg_input_layout_height">
        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/n_padding_normal"
            android:textColor="@color/eggplant"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text_size"
            android:text="国家和地区"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_centerVertical="true"
            android:textColor="@color/eggplant"
            android:layout_marginRight="@dimen/n_padding_normal"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/button_text_size"
            android:layout_width="wrap_content"
            android:text="中国"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:id="@id/reg_phone_number_layout"
        android:layout_below="@id/reg_phone_area"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/n_padding_normal"
        android:padding="@dimen/n_padding_normal"
        android:background="@color/white"
        android:weightSum="5"
        android:layout_height="@dimen/reg_input_layout_height">
        <TextView
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:layout_marginLeft="@dimen/n_padding_normal"
            android:textColor="@color/eggplant"
            android:layout_marginRight="@dimen/n_padding_normal"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/button_text_size"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="+86"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@id/reg_phone_number"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/n_padding_normal_b"
            android:drawableBottom="@color/white"
            android:textSize="@dimen/button_text_size"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/register_title_edit"
            android:inputType="number"
            android:gravity="center_vertical"
            android:singleLine="true" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/notice_something"
        android:layout_below="@id/reg_phone_number_layout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/n_padding_normal"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/register_notice_something1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="@dimen/n_padding_normal"
            android:text="@string/register_notice_something2"
            android:layout_width="wrap_content"
            android:textColor="@color/royalblue"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/register_notice_something3"
            android:layout_marginLeft="@dimen/n_padding_normal"
            android:layout_marginRight="@dimen/n_padding_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/register_notice_something4"
            android:textColor="@color/royalblue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
