<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:id="@+id/navdrawer"
        android:layout_width="@dimen/navdrawer_width"
        android:layout_gravity="start"
        android:background="@color/white"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/image1"
            android:padding="@dimen/n_padding_normal"
            android:orientation="horizontal"
            android:layout_height="@dimen/left_menu_item_width">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_margin="@dimen/n_padding_normal_h"
                android:id="@id/shop_logo_image"
                android:layout_width="@dimen/left_menu_shop_logo_width_height"
                android:layout_height="@dimen/left_menu_shop_logo_width_height"
                android:src="@drawable/lib_icon"
                app:border_width="1dp"
                app:border_color="#FFFFFF"/>
            <LinearLayout
                android:layout_marginLeft="@dimen/n_padding_normal_b"
                android:layout_marginTop="@dimen/n_padding_normal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@id/reg_shop_name"
                    android:layout_width="wrap_content"
                    android:text="@string/main_user_name"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@id/account"
                    android:layout_marginTop="@dimen/n_padding_normal"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/main_user_accound"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <!--返回首页-->
        <LinearLayout
            android:id="@id/main_left_home_layout"
            android:layout_width="match_parent"
            android:background="@drawable/main_menu_layout"
            android:weightSum="4"
            android:layout_height="@dimen/left_menu_item_sub_width">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="@dimen/n_padding_normal"
                android:gravity="center_horizontal|center_vertical"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/n_padding_normal_h"
                android:padding="@dimen/n_padding_normal"
                android:gravity="center_vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/main_shop_index"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <!--我的商品-->
        <LinearLayout
            android:id="@id/main_left_user_layout"
            android:layout_width="match_parent"
            android:background="@drawable/main_menu_layout"
            android:weightSum="4"
            android:layout_height="@dimen/left_menu_item_sub_width">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="@dimen/n_padding_normal"
                android:gravity="center_horizontal|center_vertical"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/n_padding_normal_h"
                android:padding="@dimen/n_padding_normal"
                android:gravity="center_vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/main_user_info"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <!--我的商品类别-->
        <LinearLayout
            android:id="@id/main_left_cover_layout"
            android:layout_width="match_parent"
            android:background="@drawable/main_menu_layout"
            android:weightSum="4"
            android:layout_height="@dimen/left_menu_item_sub_width">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="@dimen/n_padding_normal"
                android:gravity="center_horizontal|center_vertical"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/stack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/n_padding_normal_h"
                android:padding="@dimen/n_padding_normal"
                android:gravity="center_vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/main_user_cover_type"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <!--消息-->
        <LinearLayout
            android:id="@id/main_left_message_layout"
            android:layout_width="match_parent"
            android:weightSum="4"
            android:background="@drawable/main_menu_layout"
            android:layout_height="@dimen/left_menu_item_sub_width">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="@dimen/n_padding_normal"
                android:gravity="center_horizontal|center_vertical"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/bubble2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/n_padding_normal_h"
                android:padding="@dimen/n_padding_normal"
                android:gravity="center_vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/main_user_message"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <!--我是分割线-->
        <View
            android:layout_width="match_parent"
            android:background="@color/gainsboro"
            android:layout_height="1dp"/>
        <!--兑换-->
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="4"
            android:layout_height="@dimen/left_menu_item_sub_width">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="@dimen/n_padding_normal"
                android:gravity="center_horizontal|center_vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/main_get_scoce"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <!--设置-->
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="4"
            android:layout_height="@dimen/left_menu_item_sub_width">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="@dimen/n_padding_normal"
                android:gravity="center_horizontal|center_vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/main_user_setting"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <!--反馈-->
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="4"
            android:layout_height="@dimen/left_menu_item_sub_width">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="@dimen/n_padding_normal"
                android:gravity="center_horizontal|center_vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/main_user_give_back"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <!--获得帮助-->
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="4"
            android:layout_height="@dimen/left_menu_item_sub_width">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:padding="@dimen/n_padding_normal"
                android:gravity="center_horizontal|center_vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/main_user_get_help"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
